# HackerOS-Installer

./: .gitattributes  Makefile  README.md  build.hacker  build.hl
configs/for-custom-edition/: config.hacker
configs/for-gaming-edition/: config.hacker
example/: config.yml
source-code/: Cargo.toml  pubspec.yaml
source-code/backend/: Cargo.toml
source-code/backend/src/: config.rs  disk.rs  install.rs  ipc.rs  main.rs  network.rs  system.rs  user.rs
source-code/gaming-edition/: Cargo.toml
source-code/gaming-edition/src/: main.rs
source-code/lib/: main.dart  welcome_screen.dart
source-code/lib/screens/: disk_screen.dart  done_screen.dart  install_screen.dart  installer_shell.dart  locale_screen.dart  network_screen.dart  summary_screen.dart  user_screen.dart
source-code/lib/services/: backend_service.dart  installer_state.dart
source-code/lib/theme/: app_theme.dart
source-code/lib/widgets/: shared_widgets.dart
source-code/src/: main.rs
src/: install.c  installer.h  main.c  screen_disk.c  screen_locale.c  screen_network.c  screen_roles.c  screen_summary.c  screen_user.c  screen_welcome.c  ui.c
