[package]
name = "HackerOS-Installer"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
git2 = "0.19.0"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.8"
indicatif = "0.17.8"
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
