[package]
name = "hackeros-installer-backend"
version = "0.0.1"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "HackerOS Installer Backend - daemon instalacyjny"
license = "BSD-3"

[dependencies]
tokio              = { version = "1.35", features = ["full"] }
serde              = { version = "1.0",  features = ["derive"] }
serde_json         = "1.0"
serde_yaml         = "0.9"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc               = "0.2"
# WAŻNE: feature "user" wymagany dla Uid::effective().is_root()
nix                = { version = "0.27", features = ["fs", "mount", "process", "user"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
