[package]
name = "HackerOS-Installer"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.23.0"
crossterm = { version = "0.25.0", features = ["event-stream"] }
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
regex = "1.9.6"
